@@ -1,5 +1,7 @@
 *SVN*
 
+* Time and DateTime#advance accept :hours, :minutes, and :seconds options.  #9825 [Geoff Buesing]
+
 * Fix Date#years_ago and #years_since from leap days.  #9864 [Geoff Buesing]
 
 * Refactor Time and Date#months_since and #months_ago to use #advance.  #9863 [Geoff Buesing]
